[tool.poetry]
name = "magic-tiler"
version = "0.1.0"
description = ""
authors = ["abstractlyZach <zach3lee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
i3ipc = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.12.0"
flake8 = "^3.9.2"
black = "^21.5b1"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["magic_tiler"]
omit = ["src/magic_tiler/interfaces.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100
